Remove the monitor process IO stuff entirely. It was cool, but it locked up the system and causes problems with freebsd

BUG:160685

svn path=/trunk/KDE/kdebase/workspace/; revision=1082463